# DDoS-Security-Manager

./: .dockerignore  README.md  docker-compose.yml
attacker/: CMakeLists.txt  Dockerfile
attacker/scripts/: slow_read.cpp  syn_flood.sh  tcp_connection_flood.cpp  udp_flood.cpp  udp_large.sh
attacker/src/: control_server.cpp
client/: Dockerfile
client/src/: client.cpp  main.cpp
ddos_client/: Dockerfile  agent.sh
server/: Dockerfile  start.sh  supervisord.conf
server/security/: CMakeLists.txt
server/security/headers/: mit_syn_f.hpp  mit_tcp_cf.hpp  mit_tcpc_sr_f.hpp  mit_udp_f.hpp
server/security/src/: analyzer.cpp  dispatcher.cpp  mit_syn_f.cpp  mit_tcp_cf.cpp  mit_tcpc_sr_f.cpp  mit_udp_f.cpp
server/src/: config.hpp  main.cpp  server.cpp
server/src/headers/: EchoThreadPool.cpp  EchoThreadPool.hpp
